// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el ProductImage Debe de mostrar el componenete con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Pruebas en el ProductImage Debe de mostrar el componenete correctamente con la imagen correspondiente 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="./coffee-mug.png"
/>
`;
